# rhul

./: .gitignore  README.md  TODO.md  dune-project  notes.md  rh-audio.opam  rh-backlight.opam  rh-network.opam  rh-wm.opam  rhul.opam
lib/: cache.ml  defaults.ml  defaults.mli  dune  env.ml  env.mli  filesystem.ml  filesystem.mli  globals.ml  path.ml  path.mli
rh_audio/lib/: dune
rh_backlight/commands/: cmd_scan.ml  dune
rh_backlight/lib/: cache.ml  cache.mli  device.ml  device.mli  discover.ml  discover.mli  display.ml  dune  globals.ml  identify.ml  kb.ml
rh_wm/lib/: dune
test/: dune  test_path.ml
